--- a/content/en/docs/a1.hello-world.md
+++ b/content/en/docs/a1.hello-world.md
@@ -1,7 +1,7 @@
 ---
 title: Functions & Algebra
 slug: functions
-url: "docs/functions-and-algebra"
+url: "Maths-in-Electronics/docs/functions-and-algebra"
 ---
 <span style="color: #173B72; font-size: 18px;">
 
@@ -146,7 +146,7 @@ Algebra is one of the first things we learn in secondary school maths and it lay
 
 A clock is the heartbeat of a chip and helps us ensure that different processes happen in the right order. Unlike the clocks we use to tell time, a clock generator can be pretty simple — it just switches between on and off states. Each time it switches on, it triggers the next step in a sequence.
 
-[![alt text](/docs/algebra1f.png)]()  <!-- needs some improvements -->
+[![alt text](Maths-in-Electronics/docs/algebra1f.png)]()  <!-- needs some improvements -->
 There are 2 logic paths on the left and they are merged into 1 on the right. If we did a direct connection then the shorter path would give us a result before the short path which could lead to incorrect values being outputted from the logic block on the right. We use latches or flip-flops to make sure that new values are not sent to the next logic block until the clock goes high where the clock frequency is set so that both logic paths have completed.
 
 To create a clock with a specific frequency (how fast it turns on and off), we can use a capacitor. A capacitor acts like a battery; the more current you give it, the faster it charges. This behavior is described by the equation <math xmlns="http://www.w3.org/1998/Math/MathML">
