pictures might work

--- a/content/en/docs/a1.hello-world.md
+++ b/content/en/docs/a1.hello-world.md
@@ -208,7 +208,7 @@ In reality, the capacitor is implemented using another transistor and the capaci
 </math>
 .
 
-[![alt text](/docs/algebra2.png)]()
+[![alt text](/docs/../algebra2.png)]()
 
 When we put all these equations together, we find that if the capacitor and the transistor are the same type and size, changing their widths doesn’t affect the final clock frequency. This is great because we can use the lengths to set the frequency and the widths can be adjusted to minimize the impact of real life variations like noise. Noise is random fluctuations in current caused by the random movement of electrons that would mess with our clock frequency. 
 
