pictures should work

--- a/content/en/docs/a1.hello-world.md
+++ b/content/en/docs/a1.hello-world.md
@@ -208,11 +208,11 @@ In reality, the capacitor is implemented using another transistor and the capaci
 </math>
 .
 
-[![alt text](/docs/algebra2.png)]()
+[![alt text](algebra2.png)]()
 
 When we put all these equations together, we find that if the capacitor and the transistor are the same type and size, changing their widths doesn’t affect the final clock frequency. This is great because we can use the lengths to set the frequency and the widths can be adjusted to minimize the impact of real life variations like noise. Noise is random fluctuations in current caused by the random movement of electrons that would mess with our clock frequency. 
 
-[![alt text](/docs/algebra3.png)]()  <!-- needs some improvements -->
+[![alt text](algebra3.png)]()  <!-- needs some improvements -->
 
 ## Quadratics
 These come up when designing filters, antennas, control systems and all other kinds of things. 
@@ -220,17 +220,17 @@ These come up when designing filters, antennas, control systems and all other ki
 Filters and Resonators
 A filter is a component that stops signals of certain frequency from passing through. It is one of the most basic things in electronics and is used in everything from sound systems to 5G communication. . One common type is the low-pass filter, which allows low frequencies to pass while blocking higher ones. It’s made up of a resistor and a capacitor. At low frequencies, the capacitor resists current flow, so the output voltage is similar to the input. But as the frequency increases, the capacitor allows more current to pass, reducing the output voltage.
 
-[![alt text](/docs/algebra4b.png)]()
-[![alt text](/docs/algebra4a.png)]()
+[![alt text](algebra4b.png)]()
+[![alt text](algebra4a.png)]()
 
 
-[![alt text](/docs/algebra5.png)]()
+[![alt text](algebra5.png)]()
 
 
 We can use the equations above to design a special type of filter called a resonator and this is the basic principle of how antennas work. When we connect  a resistor, capacitor and inductor in series, we see that energy will oscillate between the capacitor and the inductor. This is because the capacitor has to charge up before it can discharge through the inductor which then causes the inductor to charge up. When the input signal is at a specific frequency, the resistance of the capacitor and inductor is at a minimum which means that the current flowing through the circuit maximises and we get the graph below. 
 
-[![alt text](/docs/algebra7.png)]()
-[![alt text](/docs/algebra7b.png)]()
+[![alt text](algebra7.png)]()
+[![alt text](algebra7b.png)]()
 
 Now this is where quadratics comes in, the equation modelling a resonator is given by <math xmlns="http://www.w3.org/1998/Math/MathML">
   <mfrac>
@@ -291,7 +291,7 @@ LC values are fixed for the frequency we want to transmit or receive as the resi
   </mrow>
 </math> so this means we can use the discriminant to get an upper bound for the resistor.
 
-[![alt text](/docs/algebra8a.png)]()
+[![alt text](algebra8a.png)]()
 
 
 <math xmlns="http://www.w3.org/1998/Math/MathML">
@@ -362,15 +362,15 @@ Example Transfer function: <math xmlns="http://www.w3.org/1998/Math/MathML">
 </math>
 
 
-[![alt text](/docs/algebra9.png)]()
+[![alt text](algebra9.png)]()
 
 When we solve this quadratic, we are actually finding the solutions of a differential equation. This means that if the roots are positive, then the system is unstable. The reason behind this is hard to explain at the moment as it requires understanding of complex numbers, differential equations and exponentials (negative roots correspond to decaying terms that settle to a certain value). 
 
-[![alt text](/docs/algebra10.png)]()
+[![alt text](algebra10.png)]()
 
 We are going to go back to our clock generator example as we can use a control system there to ensure that our clock frequency stays constant. The clock generator control loop would be made up of 3 parts - a sensor, a filter and an oscillator. The sensor would compare the output frequency with the value we want and produce a voltage that is proportional to the difference between them. The filter would take the sensor output and remove any high frequency components that could cause instability and the oscillator would be the part we talked about in the algebra section which would produce a frequency proportional to the input voltage. All this comes together to give us the transfer function: 
 
-[![alt text](/docs/algebra11.png)]()
+[![alt text](algebra11.png)]()
 
 We would then use the quadratic formula to find the roots of the denominator which gives - 
 <math xmlns="http://www.w3.org/1998/Math/MathML">
