--- a/content/en/docs/b1.modules.md
+++ b/content/en/docs/b1.modules.md
@@ -20,15 +20,15 @@ Trigonometry is a huge topic in electronics engineering. It is the backbone for 
 ## Fourier Transform
 One of the most useful concepts is that any signal is a sum of sines and cosines of different frequencies. The is a bit abstract but if we think about it like this: we can use x and y to represent a whole 2D plane as we cannot multiply x by any number to get y. The same is true with sines and cosines, there is no number we can multiply cosine by to make sine so together they can act as building blocks for more complex signals. If you then start changing the amplitude (height), phase (delay) and frequency (repetitions) of the signal, you get to a point where any signal can be  represented. We can use something called a fourier transform to break down any signal in time into this sum. 
 
-[![alt text](/docs/btrig1.png)]()
+[![alt text](btrig1.png)]()
 
 The fourier transform is quite complicated as it requires understanding of integration and complex numbers but the graphs that we get from it are quite easy to understand. We can then plot this on a frequency plot and get something similar to the image below. This is extremely useful in audio processing as we can take the fourier transform of the audio recording and then clean up the signal by removing unwanted frequencies using filters (capacitors and inductors can be used to block certain frequencies as we saw in the Algebra section). 
 
-[![alt text](/docs/btrig2.png)]()
+[![alt text](btrig2.png)]()
 Image from https://visualizingmathsandphysics.blogspot.com/2015/06/fourier-transforms-intuitively.html
 
-[![alt text](/docs/btrig3.png)]()
-[![alt text](/docs/btrig4.png)]()
+[![alt text](btrig3.png)]()
+[![alt text](btrig4.png)]()
 
 We can see from the image above that the highest peaks are in the range of 50-60Hz and there are more moderate peaks from 60-220Hz. THe 50-60Hz peaks probably correspond to oscillations caused by AC supply. All the recording equipment is probably powered by mains and in the UK the frequency of the mains signal is 50-60Hz which can be added to the recorded signal due to the various paths that exist within the circuitry. W could actually remove this by creating a digital filter that removes all frequencies below 60Hz which would then give us a cleaner track. 
 
@@ -94,15 +94,15 @@ can be broken down into a sum of cosines (<math xmlns="http://www.w3.org/1998/Ma
   <mo>)</mo>
 </math> by the carrier, we get:
 
-[![alt text](/docs/btrig7.png)]()
+[![alt text](btrig7.png)]()
 
 The high frequency term can be removed by a low pass filter so that we only transmit at one frequency and as we can see the message is encoded within the amplitude of the signal. 
 
-[![alt text](/docs/btrig5.png)]()
+[![alt text](btrig5.png)]()
 
 The magic comes on the receiver side. 
 
-[![alt text](/docs/btrig6.png)]()
+[![alt text](btrig6.png)]()
 
 To decode this on our radio, we multiply by the carrier frequency cosine again (<math xmlns="http://www.w3.org/1998/Math/MathML">
   <mo>cos</mo>
@@ -115,11 +115,11 @@ To decode this on our radio, we multiply by the carrier frequency cosine again (
 </math>
 ) which gives:
 
-[![alt text](/docs/btrig9.png)]()
+[![alt text](btrig9.png)]()
 
 (cos even signal so -wm = wm) so output after lowpass filtering again is 
 
-[![alt text](/docs/btrig8.png)]()
+[![alt text](btrig8.png)]()
 
 which is exactly a quarter of our original message signal so can be easily corrected using a x4 amplifier. 
 
