--- a/content/en/docs/c1.Exponentials.md
+++ b/content/en/docs/c1.Exponentials.md
@@ -3,8 +3,8 @@ title: Exponentials and Logarithms
 slug: Exponentials and Logarithms
 ---
 
-[![alt text](/docs/cexp1a.png)]() 
-[![alt text](/docs/cexp2a.png)]() 
+[![alt text](cexp1a.png)]() 
+[![alt text](cexp2a.png)]() 
 
 <span style="color: #173B72; font-size: 18px;">
 
@@ -44,7 +44,7 @@ Exponentials are most commonly used in the context of complex numbers but they a
 
 One practical application of exponential behaviour is found in buck converters. They use various components to step the input voltage down to a lower value which is useful for phone charging. To charge a battery safely, we need the current to be constant even as the battery voltage fluctuates from about 3.2V at 0% to 4.2V at 100%. This change will lead to the charging current decreasing so we can use a buck converter and a control loop to convert excess input voltage into current which maintains the constant current that we are after. 
 
-[![alt text](/docs/cexp3.png)]()
+[![alt text](cexp3.png)]()
 Image from https://www.vrogue.co/post/buck-boost-converter-circuit-diagram-matlab
 
 The buck converter works by rapidly opening and closing the switch to control the current flowing into the inductor which creates a voltage across the inductor (<math xmlns="http://www.w3.org/1998/Math/MathML">
@@ -56,8 +56,8 @@ The buck converter works by rapidly opening and closing the switch to control th
 </math>
 ). The longer we keep the switch closed, inductor voltage decreases because as we can see from the diagram, voltage across the inductor = Vin - Vout so as the inductor voltage comes closer to 0, Vout increases to become closer to Vin. This tells us that we can control our output voltage by doing two things, either changing the input voltage or changing the amount of time that the switch is closed. We use the latter to implement a control loop that measures the ouput current and changes the on time of the switch (amount of time that the switch is closed) to ensure that the current stays constant. 
 
-[![alt text](/docs/cexp4a.png)]()
-[![alt text](/docs/cexp4b.png)]()
+[![alt text](cexp4a.png)]()
+[![alt text](cexp4b.png)]()
 
 Images from https://www.electricaltechnology.org/2020/09/buck-converter.html
 
@@ -95,7 +95,7 @@ When we open the switch, the inductor current discharges through the battery and
 Due to a multitude of different reasons, mainly to do with efficiency, it is better to have a low series resistance to the capacitor which means the only way to decrease the impact of this discharge is to increase the capacitor value. This then slows down the ability of the control loop to respond so you would use this maths, the control loop maths and experience and intuition to select a good capacitor value that gives you a fast, stable system with smooth output voltage.
 
 ## Frequency Plots
-[![alt text](/docs/cexp5.jpg)]()
+[![alt text](cexp5.jpg)]()
 
 Image from https://gunner-krandall.blogspot.com/2022/04/mathematical-model-of-low-pass-filter.html shows actual frequency plot and approximated plot.
 
