--- a/content/en/docs/d1.DiffandInteg.md
+++ b/content/en/docs/d1.DiffandInteg.md
@@ -183,7 +183,7 @@ If we differentiate everything to give <math xmlns="http://www.w3.org/1998/Math/
 
 We can make the maths easier by using transforms like the Fourier transform from the trigonometry section or another common transform called the Laplace transform which converts this differential equation into the quadratic equation we saw in the Algebra section. The equations for the Fourier and Laplace transforms are:
 
-[![alt text](/docs/diff1.png)]()
+[![alt text](diff1.png)]()
 
 We do have to be able to do integrals but it will get to a point where you are transforming and inverting solely by inspection. For example <math xmlns="http://www.w3.org/1998/Math/MathML">
   <mfrac>
@@ -214,21 +214,21 @@ We do have to be able to do integrals but it will get to a point where you are t
 This example demonstrates that most of the time we need differential equations to model our circuits but we then use certain techniques to reduce the actual amount of integration and differentiation that we have to do on the job. 
 
 ## Modelling transistors
-[![alt text](/docs/diff2.jpg)]()
+[![alt text](diff2.jpg)]()
 
 Image from https://www.youtube.com/@ALLABOUTELECTRONICS
 
 There is a common case where we tend to do a bit of differentiation and that is when were are working with transistors. Transistors are extremely complex to model as there are many different effects going on within them. MOSFETs (a certain kind of transistor) have 4 pins and the voltages between those 4 pins can affect how it works. 
 
-[![alt text](/docs/diff3.png)]()
+[![alt text](diff3.png)]()
 
 An extremely common circuit that we have to design is an amplifier which is used to boost a signal before we transmit it via an antenna. As we saw with the resonator, it can also pick up other frequencies which can mess up the signal that we want to pickup, by amplfiying the signal we are increasing the power of the signal so the interfering signals don't cause as much of an issue and the message is still readable. The proper name for this is improving the signal to noise ratio. The amplifier circuit works by turning our voltage signal into a current and then turning that current into a voltage via the resistor and we get a boosted signal out the other end. The equations governing this are:
 
-[![alt text](/docs/diff4.png)]()
+[![alt text](diff4.png)]()
 
 The Vout equation isn't that great for us if we want to compare different topologies so we differentiate the Id equation to give 
 
-[![alt text](/docs/diff5.png)]()
+[![alt text](diff5.png)]()
 
 If we substitute <math xmlns="http://www.w3.org/1998/Math/MathML">
   <mrow>
