--- a/content/en/docs/e1.VectorsandMatrices.md
+++ b/content/en/docs/e1.VectorsandMatrices.md
@@ -18,12 +18,12 @@ These digital filters are much easier and cheaper to scale up compared to analog
 
 To better understand digital filters we will do a deep dive into the stock price case. If we take the Nvidia stock price data and do nothing to it, we get a very spiky graph and that is because of random, short-term price fluctuations. 
 
-[![alt text](/docs/evect1.png)]()
+[![alt text](evect1.png)]()
 
 If we use something called a moving average filter which is a type of low pass filter we can remove these fluctuations and get a better idea of the trends within the data. The coefficients for a moving average filter are all the same so if you are averaging the last 2 days of data the coefficient vector would be [0.5, 0.5] whereas for 5 days it would be [0.2, 0.2, 0.2, 0.2, 0.2]. The 2 graphs below show a 2-day moving average filter and a 5-day moving average filter. As you can see the 5-day moving average is much smoother whereas we can barely see any difference in the 2-day filter so we can say that a larger averaging window corresponds to a lower cuttoff frequency.
 
-[![alt text](/docs/evect2.png)]()
-[![alt text](/docs/evect3.png)]()
+[![alt text](evect2.png)]()
+[![alt text](evect3.png)]()
 
 
 ## Object Detection
