pictures all fixed

--- a/content/en/docs/h1.ComplexNumbers.md
+++ b/content/en/docs/h1.ComplexNumbers.md
@@ -86,7 +86,7 @@ The first time I mentioned complex numbers, it was to do with resonators. I said
 </math>
  and w is the angular frequency. This impedance is imaginary because the capacitor and inductor not only attenuate the signal (change the magnitude) but they can also introduce phase shifts (time shifts) into the signal. When you put current into an capacitor, the voltage is actually a quarter period behind the current which corresponds to a phase shift of -90 degrees. Another way of thinking about this is that if we put a sine wave current into the capacitor, the capacitor essentially integrates the current so the voltage is -cos which is -90 degrees phase shift. The opposite thing happens with inductors as the current is differentiated to give the voltage so a sine wave becomes cos which is a +90 phase shift. 
 
-[![alt text](gcomp1.png)]()
+[![alt text](../gcomp1.png)]()
 Image from https://silopepic.weebly.com/phase-shift.html
 
 
