1 picture was missing

--- a/content/en/docs/f1.NumericalMethods.md
+++ b/content/en/docs/f1.NumericalMethods.md
@@ -42,7 +42,7 @@ slug: Numerical Methods
 
 Numerical methods are important in electronics as computers are digital beasts so cannot easily do algebraic manipulation or integrals. When we design a computer we start from something called the instruction set architecture. This is a list of instructions that we can then convert any other program into. For example if we want to add 2 numbers together, there will be an add instruction. If we have a piece of code that is a = 1 + 2, for the computer to understand it we will write this as add a, 1, 2 which means add 1 and 2 and store the result in a which would be some sort of memory location. This instruction is currently in a format known as assembly which means that it can be read by humans and can also easily converted into machine code (0s and 1s). This add instruction will then have a path in the hardware which takes it from these original bits to calculating and storing the final result. In some instruction sets, integral and differential instructions do exist but more often than not we have to use multiple instructions to do the same thing and since computers do calculations on binary numbers (these can be both integers and decimals) and not variables, it is easier to do these calculations using numerical methods.
 
-[![alt text](../fnum3.png)]() Voronoi
+[![alt text](../fnum3.jpeg)]()
 
 A common function that we would use numerical methods to calculate is the square root. Wherever we need to find a distance we tend to use this so this can be cases like google maps or CAD programs. The case where I used it was for designing a modification to google maps that coloured in zones around points of interests so you could easily see what your nearest point of interest. For example, if you want to find every cafe in London and see which one you are nearest to, it would calculate the distance from one pixel to each of the cafes. Each cafe would be associated with a colour and depending on which cafe that pixel is nearest to would determine the colour of that pixel. This is then repeated for every other pixel on the screen. To actually do the square root we would use Newton-Raphson. 
 
